# chronica

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
common/: pyproject.toml
common/models/: Config.py  Location.py  RSSFeed.py  RSSItem.py  RSSNews.py  __init__.py
common/schemas/: __init__.py  stg_chr_rss_news.py
common/utils/: get_schema.py
dwh/compose/dbt/: docker-compose.yml
dwh/compose/evidence/: Dockerfile  bootstrap.sh  docker-compose.yml
dwh/compose/postgres/: docker-compose.yml
dwh/compose/redpanda/: docker-compose.yml
dwh/migrations/ch/: 002_create_table_stg.chr_rss_news.sql
dwh/migrations/pg/: 003_create_table_dtl.chr_rss_feeds.sql  003_create_table_dtl.d_rss_feeds.sql  004_insert_into_dtl.chr_rss_feeds.sql  004_insert_into_dtl.d_rss_feeds.sql  005_create_table_stg.chr_rss_news.sql  005_create_table_stg.rss_news.sql  006_create_table_dtl.h_chr_rss_news.sql  007_create_table_dtl.s_chr_rss_news_texts.sql  007_create_table_dtl.s_rss_news_texts.sql  008_create_table_dtl.s_chr_rss_news_embeddings.sql  008_create_table_dtl.s_rss_news_embeddings.sql  009_create_table_dtl.d_chr_stories.sql  009_create_table_dtl.d_stories.sql  010_insert_into_dtl.d_chr_stories.sql  010_insert_into_dtl.d_stories.sql  011_create_view_dm.uniq_news.sql  (+1 more)
services/rss-fetcher/: pyproject.toml  rss-fetcher.py
services/rss-fetcher/compose/: Dockerfile  docker-compose.yml
services/rss-fetcher/config/: rss_feeds.yml
services/rss-fetcher/migrations/: 001_init_db.sql  002_create_rss_news.sql
(+15 files in other folders)
