[project]
name = "chronica-common"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "pendulum>=3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "xxhash>=3.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]